<resources>
    <string name="app_name">微E贷</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_tab_home">首页</string>
    <string name="main_tab_my">我的</string>
    <string name="main_tab_bbs">论坛</string>
    <string name="main_tab_more">更多</string>
    <string name="title_financial">优选理财</string>
    <string name="title_licai_recommend">项目推荐</string>
    <string name="title_licai_transfer">债权转让</string>
    <string name="title_financial_detail">理财详情</string>
    <string name="title_finance_investment">投资理财</string>
    <string name="title_account">我的账号</string>
    <string name="title_account_email">邮箱验证</string>
    <string name="title_account_avatars">账户信息</string>
    <string name="title_micro_history">微币记录</string>
    <string name="title_receivable_searcht">回款查询</string>
    <string name="title_money_record">资金记录</string>
    <string name="title_my_wealth">我的财富</string>
    <string name="title_withdrawal_record">提现记录</string>
    <string name="title_withdrawal">提现</string>
    <string name="title_financial_management">理财管理</string>
    <string name="title_my_bank">我的银行卡</string>
    <string name="title_change_bank">修改银行卡</string>
    <string name="title_my_stand_inside_letter">站内信</string>
    <string name="title_security_level">账户安全</string>
    <string name="title_security_phone">绑定手机</string>
    <string name="title_change_login_password">修改登录密码</string>
    <string name="title_change_payment_password">修改支付密码</string>
    <string name="title_about">关于我们</string>
    <string name="title_partner">合作伙伴</string>
    <string name="title_about_company">公司介绍</string>
    <string name="title_calculator_interest">利息计算器</string>
    <string name="title_calculator_net_credit">网贷计算器</string>
    <string name="title_information">资讯</string>
    <string name="title_hero">英雄榜</string>
    <string name="title_lucky_draw">抽奖活动</string>
    <string name="title_lucky_draw_record">抽奖记录</string>
    <string name="title_award_convert">奖品折现</string>
    <string name="title_stand_inside_letter">信件</string>
    <string name="title_investor">投资人列表</string>
    <string name="title_password_gestures">手势密码</string>
    <string name="title_password_gestures_lock">设置手势密码</string>
    <string name="title_my_recharge">充值</string>
    <string name="title_my_recharge_online">在线充值</string>
    <string name="title_phone_recharge">手机充值</string>
    <string name="title_cardeal">代办违章</string>
    <string name="login_user_hint">手机号/邮箱/用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_valicode_hint">输入验证码</string>
    <string name="login_btn">登录</string>
    <string name="login_remember_user">记住用户</string>
    <string name="login_register">注册</string>
    <string name="login_forget_password">找回密码</string>
    <string name="login_waiting">正在登陆中.....</string>
    <string name="login_user_empty">账号不能为空</string>
    <string name="login_password_empty">密码不能为空</string>
    <string name="login_valicode_empty">验证码不能为空</string>
    <string name="login_valicode_not_match">输入的验证码不匹配</string>
    <string name="register_title">注册</string>
    <string name="register_email">用户邮箱: </string>
    <string name="register_username">用&#160;&#160;户&#160;&#160;名: </string>
    <string name="register_login_password">登陆密码: </string>
    <string name="register_login_password_confirm">确认密码: </string>
    <string name="register_real_name">真实姓名: </string>
    <string name="register_sex">性&#160;&#160;&#160;&#160;别: </string>
    <string name="register_email_hint">邮件地址不能为空</string>
    <string name="register_username_hint">请输入5-15位字符</string>
    <string name="register_login_password_hint">登陆密码不能少于6个字符</string>
    <string name="register_real_name_hint">真实姓名不能为空</string>
    <string name="register_btn">同意协议并注册</string>
    <string name="register_agreement">《微E贷在线服务协议》</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="change_password_old_password">旧&#160;&#160;密&#160;&#160;码：</string>
    <string name="change_password_new_password">新&#160;&#160;密&#160;&#160;码：</string>
    <string name="change_password_confirm_password">确认密码：</string>
    <string name="change_password_verification_code">验&#160;&#160;证&#160;&#160;码：</string>
    <string name="home_you_left">优选理财</string>
    <string name="home_you_right">收益16.8%以上</string>
    <string name="home_ya_left">项目推荐</string>
    <string name="home_ya_right">本息保障</string>
    <string name="home_sign_in_left">每日签到</string>
    <string name="home_sign_in_right">(未登陆)</string>
    <string name="home_my_account_left">我的账号</string>
    <string name="home_my_account_right">(未登陆)</string>
    <string name="home_information">微贷资讯</string>
    <string name="home_notice">微贷公告</string>
    <string name="account_real_name">真实姓名</string>
    <string name="account_sex">性别</string>
    <string name="account_date_birth">出生日期</string>
    <string name="account_phone">手机号码</string>
    <string name="account_email">注册邮箱</string>
    <string name="account_modify_login_password">修改登录密码</string>
    <string name="account_password_protection">密码保护</string>
    <string name="account_password_management_gestures">管理密码手势</string>
    <string name="account_not_set">未设置</string>
    <string name="user_money_record">资金记录</string>
    <string name="user_money_return_search">回款查询</string>
    <string name="user_my_wealth">我的财富</string>
    <string name="user_withdrawal_record">提现记录</string>
    <string name="user_my_micro_currency">我的微币</string>
    <string name="user_financial_management">理财管理</string>
    <string name="user_bank_card">银行卡</string>
    <string name="user_stand_inside_letter">站内信</string>
    <string name="user_lucky_draw">抽奖活动</string>
    <string name="user_lucky_draw_record">抽奖记录</string>
    <string name="user_account_security">账户安全</string>
    <string name="user_available_balance">可用余额%s元</string>
    <string name="user_available_balance_empty">暂无可用余额</string>
    <string name="user_available_micro_currency">可用微币 %s (个)</string>
    <string name="user_my_lucky_draw_record">抽奖总次数 %s</string>
    <string name="user_receivable"> <![CDATA[ <b><font color="#ff5601">%s </font></b> ]]> 元</string>
    <string name="user_receivable_micro_currency"> <![CDATA[ <b><font color="#ff5601">%s </font></b> ]]> 微币</string>
    <string name="user_my_wealth_total_amount">账户资金总额(元)</string>
    <string name="user_my_wealth_available_balance">账户可用余额(元)</string>
    <string name="user_my_wealth_collecting_money">待收资金(元)</string>
    <string name="user_my_wealth_freeze_funds">冻结资金(元)</string>
    <string name="user_my_wealth_my_micro_currency">我的微币(个)</string>
    <string name="user_my_wealth_available_micro_currency">可用微币</string>
    <string name="user_my_wealth_total_micro_currency">共获微币</string>
    <string name="user_my_wealth_check_micro_currency_history">查看微币记录</string>
    <string name="user_my_wealth_recharge">充值</string>
    <string name="user_my_wealth_withdrawal">提现</string>
    <string name="user_my_available_micro_currency">可用微币(个)</string>
    <string name="user_my_total_micro_currency">共获微币(个)</string>
    <string name="user_my_bank_real_name">真实姓名:</string>
    <string name="user_my_bank_account">账&#160;&#160;&#160;&#160;号:</string>
    <string name="user_my_bank_bank">开户银行:</string>
    <string name="user_my_bank_branch_name">支行名称:</string>
    <string name="user_my_bank_bank_card_code">银行卡号:</string>
    <string name="user_my_bank_modify_bank_card">修改银行卡</string>
    <string name="user_my_bank_recharge_name">持卡人姓名:</string>
    <string name="user_my_bank_recharge_id_card">身份证号:</string>
    <string name="user_my_bank_recharge_phone">手机号:</string>
    <string name="user_my_bank_recharge_input_validation">验证码:</string>
    <string name="user_my_bank_recharge_amount">充值金额:</string>
    <string name="user_my_bank_recharge_quick_payment">开通快捷支付:</string>
    <string name="user_my_withdrawal_account_balance">账号余额:</string>
    <string name="user_my_withdrawal_available_balance">可用余额:</string>
    <string name="user_my_withdrawal_freeze_balance">冻结余额:</string>
    <string name="user_my_withdrawal_withdrawal_bank">提现银行:</string>
    <string name="user_my_withdrawal_trade_password">交易密码:</string>
    <string name="user_my_withdrawal_withdrawal_amount">提现金额:</string>
    <string name="user_my_financial_management_conditions_borrowing">已成功投资的借款</string>
    <string name="user_my_financial_management_conditions_collection">未收款明细帐</string>
    <string name="user_my_financial_management_borrowers">借款者: %s</string>
    <string name="user_my_financial_management_amount">金额(元): ￥ %s</string>
    <string name="user_my_financial_management_time_limit">期限: %s 个月</string>
    <string name="user_my_financial_management_loan_amount">借出金额: ￥%s </string>
    <string name="user_my_financial_management_borrowers_integral">借款者积分: %s 分</string>
    <string name="user_my_financial_management_annual_interest_rate">年利率: %s %% </string>
    <string name="user_my_financial_management_bid_time">投标时间:</string>
    <string name="user_my_financial_management_receivable_interest">应收本息:<![CDATA[ <b><font color="#ff5601">￥%s</font></b> ]]> </string>
    <string name="user_my_financial_borrowers_receivable_date">应收日期: %s</string>
    <string name="user_my_financial_borrowers_borrower_name">借款者: %s</string>
    <string name="user_my_financial_borrowers_installment">第几期/总期数: %s</string>
    <string name="user_my_financial_borrowers_total_payment">收款总额: ￥%s</string>
    <string name="user_my_financial_borrowers_capital">应收本金: ￥%s</string>
    <string name="user_my_financial_borrowers_interest">应收利息: ￥%s</string>
    <string name="user_my_financial_borrowers_late_interest">逾期利息: ￥%s</string>
    <string name="user_my_financial_borrowers_late_days">逾期天数: %s</string>
    <string name="user_my_financial_borrowers_status">状态: %s</string>
    <string name="user_security_level"> 你的账户安全等级为<![CDATA[ <b><font color="#ff5601">%s </font></b> ]]>,请完成设置</string>
    <string name="more_interest">利息计算器</string>
    <string name="more_net_loan">网贷计算器</string>
    <string name="more_version">版本号</string>
    <string name="more_account_setting">账号设置</string>
    <string name="more_check_update">检查更新</string>
    <string name="more_feedback">意见反馈</string>
    <string name="more_website">官方网站</string>
    <string name="more_about">关于我们</string>
    <string name="more_about_weedai">了解微E贷</string>
    <string name="more_qq">官方QQ群</string>
    <string name="more_telephone">客服电话</string>
    <string name="more_website_value">www.weedai.com</string>
    <string name="more_qq_value">324991669</string>
    <string name="more_telephone_value">400-0881-609</string>
    <string name="conditions_all">全部</string>
    <string name="conditions_borrowing">正在借款</string>
    <string name="conditions_reimbursing">正在还款</string>
    <string name="conditions_complete_reimbursement">已还完款</string>
    <string name="financial_annual_rate">年化率：<![CDATA[ <b><font color="#ff5601">%s %%</font></b> ]]></string>
    <string name="financial_deadline">期限: %s 个月</string>
    <string name="financial_amount">金额: %s 元</string>
    <string name="financial_reward">奖励: %s %%</string>
    <string name="financial_reward_empty">奖励: 暂无</string>
    <string name="financial_btn_join">立即加入</string>
    <string name="financial_btn_have_full">已满额</string>
    <string name="financial_btn_completed">已完成</string>
    <string name="financial_btn_payment">还款中</string>
    <string name="financial_detail_hint">为保障资金安全,投资前需完成安全认证</string>
    <string name="financial_detail_btn">立即投资</string>
    <string name="financial_detail_amount">理财金额 %s 元</string>
    <string name="financial_detail_other">剩余金额 %s 元</string>
    <string name="financial_detail_annual_rate">年化利率 %s %%</string>
    <string name="financial_detail_reward">奖励 <![CDATA[ <b><font color="#ff5601">%s %%</font></b> ]]></string>
</resources>