<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/main_content_padding_top">

        <LinearLayout style="@style/layoutRegister">

            <TextView
                style="@style/textRegisterTitle"
                android:text="@string/register_email" />

            <EditText
                android:id="@+id/etEmail"
                style="@style/textRegister"
                android:inputType="textEmailAddress"
                android:hint="@string/register_email_hint" />
        </LinearLayout>

        <include layout="@layout/view_horizontal_line" />

        <LinearLayout style="@style/layoutRegister">

            <TextView
                style="@style/textRegisterTitle"
                android:text="@string/register_username" />

            <EditText
                android:id="@+id/etUsername"
                style="@style/textRegister"
                android:hint="@string/register_username_hint" />
        </LinearLayout>

        <include layout="@layout/view_horizontal_line" />

        <LinearLayout style="@style/layoutRegister">

            <TextView
                style="@style/textRegisterTitle"
                android:text="@string/register_login_password" />

            <EditText
                android:id="@+id/etNewPassword"
                style="@style/textRegister"
                android:hint="@string/register_login_password_hint"
                android:inputType="textPassword" />
        </LinearLayout>

        <include layout="@layout/view_horizontal_line" />

        <LinearLayout style="@style/layoutRegister">

            <TextView
                style="@style/textRegisterTitle"
                android:text="@string/register_login_password_confirm" />

            <EditText
                android:id="@+id/etConfirmPassword"
                style="@style/textRegister"
                android:hint="@string/register_login_password_hint"
                android:inputType="textPassword" />
        </LinearLayout>

        <include layout="@layout/view_horizontal_line" />

        <LinearLayout style="@style/layoutRegister">

            <TextView
                style="@style/textRegisterTitle"
                android:text="@string/register_real_name" />

            <EditText
                android:id="@+id/etRealName"
                style="@style/textRegister"
                android:hint="@string/register_real_name_hint" />
        </LinearLayout>

        <include layout="@layout/view_horizontal_line" />

        <LinearLayout
            style="@style/layoutRegister"
            android:gravity="center_vertical">

            <TextView
                style="@style/textRegisterTitle"
                android:text="@string/register_sex" />

            <RadioGroup
                style="@style/textRegister"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:checked="true"
                    android:text="@string/sex_male" />

                <RadioButton
                    android:id="@+id/rbFeMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex_female" />

            </RadioGroup>
        </LinearLayout>

        <include layout="@layout/view_horizontal_line" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_btn_bg"
            android:text="@string/register_btn"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/register_agreement"
            android:textColor="@color/btn_bg_normal"
            android:textSize="16sp" />


    </LinearLayout>
</ScrollView>
