<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="20dp"
    android:paddingTop="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="微贷优选理财计划"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/textItemFinancialManagement"
                android:text="@string/user_my_financial_management_borrowers" />

            <TextView
                style="@style/textItemFinancialManagement"
                android:text="@string/user_my_financial_management_amount" />

            <TextView
                style="@style/textItemFinancialManagement"
                android:text="@string/user_my_financial_management_time_limit" />

            <TextView
                style="@style/textItemFinancialManagement"
                android:text="@string/user_my_financial_management_loan_amount" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/textItemFinancialManagement"
                android:text="@string/user_my_financial_management_borrowers_integral" />

            <TextView
                style="@style/textItemFinancialManagement"
                android:text="@string/user_my_financial_management_annual_interest_rate" />

            <TextView
                style="@style/textItemFinancialManagement"
                android:text="@string/user_my_financial_management_bid_time" />

            <TextView
                style="@style/textItemFinancialManagement"
                android:text="@string/user_my_financial_management_receivable_interest" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>