<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <com.lemon.aklib.widget.fragmentswitcher.FragmentSwitcher
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_above="@+id/rgMainTab"></com.lemon.aklib.widget.fragmentswitcher.FragmentSwitcher>

    <include layout="@layout/view_horizontal_line" />

    <RadioGroup
        android:id="@+id/rgMainTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/main_tab_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <RadioButton
            android:id="@+id/rbMainTabHome"
            style="@style/radioMainTabStyle"
            android:checked="true"
            android:drawableTop="@drawable/selector_main_tab_home"
            android:text="@string/main_tab_home" />

        <RadioButton
            android:id="@+id/rbMainTabMy"
            style="@style/radioMainTabStyle"
            android:drawableTop="@drawable/selector_main_tab_my"
            android:text="@string/main_tab_my" />

        <RadioButton
            android:id="@+id/rbMainTabBbs"
            style="@style/radioMainTabStyle"
            android:drawableTop="@drawable/selector_main_tab_bbs"
            android:text="@string/main_tab_bbs" />

        <RadioButton
            android:id="@+id/rbMainTabMore"
            style="@style/radioMainTabStyle"
            android:drawableTop="@drawable/selector_main_tab_more"
            android:text="@string/main_tab_more" />
    </RadioGroup>


</LinearLayout>
