<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbConditionsAll"
            style="@style/radioConditionsStyle"
            android:checked="true"
            android:text="@string/conditions_all" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/bg_horizontal_line"></View>

        <RadioButton
            android:id="@+id/rbConditionsBorrowing"
            style="@style/radioConditionsStyle"
            android:text="@string/conditions_borrowing" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/bg_horizontal_line"></View>

        <RadioButton
            android:id="@+id/rbConditionsReimbursing"
            style="@style/radioConditionsStyle"
            android:text="@string/conditions_reimbursing" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/bg_horizontal_line"></View>

        <RadioButton
            android:id="@+id/rbConditionsCompleteReimbursement"
            style="@style/radioConditionsStyle"
            android:text="@string/conditions_complete_reimbursement" />

    </RadioGroup>

    <include layout="@layout/view_horizontal_line" />

    <com.lemon.aklib.widget.PMSwipeRefreshLayout
        android:id="@+id/pullRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.lemon.aklib.widget.EndOfListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@android:color/transparent"
            android:dividerHeight="1dp">

        </com.lemon.aklib.widget.EndOfListView>

    </com.lemon.aklib.widget.PMSwipeRefreshLayout>


</LinearLayout>